--- a/formulario-de-convite/index.html
+++ b/formulario-de-convite/index.html
@@ -176,116 +176,105 @@
                         <span class="text-14">Tema do evento</span>
 
                         <div class="theme-container grid gap-8">
-
                             <div class="card">
-                                <figure>
+                                <label>
+                                    <input type="radio" name="theme" id="bithday">
                                     <img src="assets/themes/image01.png" alt="Tema de aniversário">
-                                    <figcaption>
-                                        <span class="text-14">Aniversário</span>
-                                    </figcaption>
-                                </figure>
+                                    <span class="text-14">Aniversário</span>
+                                </label>
                             </div>
 
-                            <div class="card">
-                                <figure>
+                            <div class="card"> 
+                                <label>
+                                    <input type="radio" name="theme" id="kids">
                                     <img src="assets/themes/image02.png" alt="Tema de festa Infantil">
-                                    <figcaption>
-                                        <span class="text-14">Infantil</span>
-                                    </figcaption>
-                                </figure>
+                                    <span class="text-14">Infantil</span>
+                                </label>   
                             </div>
 
                             <div class="card">
-                                <figure>
+                                <label>
+                                    <input type="radio" name="theme" id="graduation">
                                     <img src="assets/themes/image03.png" alt="Tema de Formatura">
-                                    <figcaption>
-                                        <span class="text-14">Formatura</span>
-                                    </figcaption>
-                                </figure>
+                                    <span class="text-14">Formatura</span>
+                                </label> 
                             </div>
 
-                            <div class="card">
-                                <figure>
+                            <div class="card"> 
+                                <label>
+                                    <input type="radio" name="theme" id="marriage">
                                     <img src="assets/themes/image04.png" alt="Tema de Casamento">
-                                    <figcaption>
-                                        <span class="text-14">Casamento</span>
-                                    </figcaption>
-                                </figure>
+                                    <span class="text-14">Casamento</span>
+                                </label>
                             </div>
 
                             <div class="card">
-                                <figure>
+                                <label>
+                                    <input type="radio" name="theme" id="baby-shower">
                                     <img src="assets/themes/image05.png" alt="Tema de Chá de bebê">
-                                    <figcaption>
-                                        <span class="text-14">Chá de bebê</span>
-                                    </figcaption>
-                                </figure>
+                                    <span class="text-14">Chá de bebê</span>
+                                </label>
                             </div>
 
                             <div class="card">
-                                <figure>
+                                <label>
+                                    <input type="radio" name="theme" id="bridal-shower">
                                     <img src="assets/themes/image06.png" alt="Tema de Chá de panela">
-                                    <figcaption>
-                                        <span class="text-14">Chá de panela</span>
-                                    </figcaption>
-                                </figure>
+                                    <span class="text-14">Chá de panela</span>
+                                </label>
                             </div>
 
-                            <div class="card">
-                                <figure>
+                            <div class="card">  
+                                <label>
+                                    <input type="radio" name="theme" id="Carnival">
                                     <img src="assets/themes/image07.png" alt="Tema de Carnaval">
-                                    <figcaption>
-                                        <span class="text-14">Carnaval</span>
-                                    </figcaption>
-                                </figure>
+                                    <span class="text-14">Carnaval</span>
+                                </label>
                             </div>
 
                             <div class="card">
-                                <figure>
+                                <label>
+                                    <input type="radio" name="theme" id="Easter">
                                     <img src="assets/themes/image08.png" alt="Tema de Páscoa">
-                                    <figcaption>
-                                        <span class="text-14">Páscoa</span>
-                                    </figcaption>
-                                </figure>
+                                    <span class="text-14">Páscoa</span>
+                                </label>  
                             </div>
 
                             <div class="card">
-                                <figure>
+                                <label>
+                                    <input type="radio" name="theme" id="June-festival">
                                     <img src="assets/themes/image09.png" alt="Tema de São João">
-                                    <figcaption>
-                                        <span class="text-14">São João</span>
-                                    </figcaption>
-                                </figure>
+                                    <span class="text-14">São João</span>
+                                </label>
                             </div>
 
                             <div class="card">
-                                <figure>
+                                <label>
+                                    <input type="radio" name="theme" id="Halloween">
                                     <img src="assets/themes/image10.png" alt="Tema de Halloween">
-                                    <figcaption>
-                                        <span class="text-14">Halloween</span>
-                                    </figcaption>
-                                </figure>
+                                    <span class="text-14">Halloween</span>
+                                </label>
                             </div>
 
                             <div class="card">
-                                <figure>
+                                <label>
+                                    <input type="radio" name="theme" id="Christmas">
                                     <img src="assets/themes/image11.png" alt="Tema de Natal">
-                                    <figcaption>
-                                        <span class="text-14">Natal</span>
-                                    </figcaption>
-                                </figure>
+                                    <span class="text-14">Natal</span>
+                                </label>
                             </div>
 
                             <div class="card">
-                                <figure>
+                                <label>
+                                    <input type="radio" name="theme" id="Others">
                                     <img src="assets/themes/image12.png" alt="Tema de Outro">
-                                    <figcaption>
-                                        <span class="text-14">Outro</span>
-                                    </figcaption>
-                                </figure>
+                                    <span class="text-14">Outro</span>
+                                </label> 
                             </div>
                         </div>
                     </div>
+
+                    
                 </fieldset>
                 
 
