--- a/local-turistico/index.html
+++ b/local-turistico/index.html
@@ -7,26 +7,30 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Local Turístico</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mediaquery.css">
+    <link rel="stylesheet" href="index.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <article id="title-page">
         <header>
-            <p class="headline">
+            <span class="headline">
                 Sua próxima viagem:
-            </p>
+            </span>
             <h1>Conheça Busan</h1>
         </header>
 
         <img src="assets/images/busan-city.jpg" alt="Foto da cidade de Busan - Coreio do Sul">
-        <p class="subtitle">Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</p>
+
+        <span class="subtitle">
+            Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.
+        </span>
 
         <main>
             <section id="title-list">
-                <p class="headline">Para os amantes de história</p>
+                <span class="headline">
+                    Para os amantes de história
+                </span>
                 <h2>Descubra 3 destinos imperdíveis em Busan</h2>
                 <p>
                     As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
@@ -45,12 +49,12 @@
                     <p>
                         O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro.
                     </p>
-                    <p>
+                    <span>
                         Bom para:
                         <ul>
                             <li class="history">História</li>
                         </ul>
-                    </p>
+                    </span>
                 </article>
             </section>
 
@@ -65,12 +69,12 @@
                     <p>
                         O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.
                     </p>
-                    <p>
+                    <span>
                         Bom para:
                         <ul>
                             <li class="history">História</li>
                         </ul>
-                    </p>
+                    </span>
                 </article>
             </section>
 
@@ -85,14 +89,14 @@
                     <p>
                         O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.
                     </p>
-                    <p>
+                    <span>
                         Bom para:
                         <ul>
                             <li class="couple">Casais</li>
                             <li class="family">Famílias</li>
                             <li class="free">Orçamento</li>
                         </ul>
-                    </p>
+                    </span>
                 </article>
             </section>
         </main>
@@ -104,8 +108,8 @@
     </article>
     <nav id="menu">
         <menu>
-            <a href="#"><img src="assets/icons/home.png" alt="Home"></a>
-            <a href="#"><img src="assets/icons/trip_bag.png" alt="Viagens"></a>
+            <a href="#title-page"><img src="assets/icons/home.png" alt="Home"></a>
+            <a href="#title-list"><img src="assets/icons/trip_bag.png" alt="Viagens"></a>
             <a href="#"><img src="assets/icons/account_circle.png" alt="Perfil"></a>
         </menu>
     </nav>
