--- a/portal-de-noticias/index.html
+++ b/portal-de-noticias/index.html
@@ -169,7 +169,7 @@
                     </div>
                 </article>  
                 
-                <article class="grid grid-flow-col gap-16 screen">
+                <article class="grid grid-flow-col gap-16">
                     <div>
                         <span class="content-tag">Inteligência Artificial</span>
                         <h3 class="text-xl">
@@ -184,7 +184,7 @@
                     </div>
                 </article>        
 
-                <article class="grid grid-flow-col gap-16 screen">
+                <article class="grid grid-flow-col gap-16">
                     <div>
                         <span class="content-tag">Inteligência Artificial</span>
                         <h3 class="text-xl">
@@ -199,7 +199,7 @@
                     </div>
                 </article>        
 
-                <article class="grid grid-flow-col gap-16 screen">
+                <article class="grid grid-flow-col gap-16">
                     <div>
                         <span class="content-tag">Inteligência Artificial</span>
                         <h3 class="text-xl">
