--- a/snitap/index.html
+++ b/snitap/index.html
@@ -11,6 +11,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,500&family=Montserrat:wght@500&family=Syne:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="#" target="_blank" rel="noopener" title="logo do site">
+                <img src="assets/logo.svg" alt="">
+            </a>
+            <a href="#" target="_blank" rel="noopener" title="Produtos escolhido no site">
+                <img src="assets/icons/shopping-bag.svg" alt="ícone de compras">
+                <span>1</span>
+            </a>
+        </nav>
+    </header>
 </body>
 </html>
