animation hero image

--- a/snitap/index.html
+++ b/snitap/index.html
@@ -21,7 +21,7 @@
         </a>
     </nav>
     
-    <section class="hero">
+    <section class="hero flex">
         <div>
             <h1>
                 Snitap, sua vida mais
@@ -45,6 +45,15 @@
                     </span>
                     VEJA EM AÇÃO
                 </a>
+            </div>
+        </div>
+
+        <div>
+            <div class="content">
+                <img src="assets/hero/ellipse.svg" alt="">
+                <img src="assets/hero/patins-image.png" alt="">
+                <img src="assets/hero/stars-1.svg" alt="">
+                <img src="assets/hero/stars-2.svg" alt="">
             </div>
         </div>
     </section>
