--- a/snitap/index.html
+++ b/snitap/index.html
@@ -57,5 +57,15 @@
             </div>
         </div>
     </section>
+
+    <section class="banner">
+        <div class="scroller bg-gradient-animate">
+            <div class="rolling">
+                <img src="assets/banner.svg" alt="ícones do banner">
+            </div>
+        </div>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
