--- a/snitap/index.html
+++ b/snitap/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,500&family=Montserrat:wght@500&family=Syne:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
+    <nav class="top">
         <a href="#" target="_blank" rel="noopener" title="logo do site">
             <img src="assets/logo.svg" alt="">
         </a>
@@ -63,6 +63,47 @@
             <div class="rolling">
                 <img src="assets/banner.svg" alt="ícones do banner">
             </div>
+        </div>
+    </section>
+
+    <section class="gallery">
+        <header>
+            <span>GALERIA DE FOTOS</span>
+            <h2>#usesnitap por aí</h2>
+        </header>
+
+        <div class="content">
+            <figure>
+                <img src="assets/images/01.png" alt="">
+                <figcaption>
+                    <img src="assets/images/person.png" alt="">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+
+            <figure data-delay>
+                <img src="assets/images/02.png" alt="">
+                <figcaption>
+                    <img src="assets/images/person.png" alt="">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+
+            <figure>
+                <img src="assets/images/03.png" alt="">
+                <figcaption>
+                    <img src="assets/images/person.png" alt="">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+
+            <figure data-delay>
+                <img src="assets/images/04.png" alt="">
+                <figcaption>
+                    <img src="assets/images/person.png" alt="">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
         </div>
     </section>
 
