--- a/snitap/index.html
+++ b/snitap/index.html
@@ -107,6 +107,37 @@
         </div>
     </section>
 
+    <footer class="flex">
+        <div class="logo flex">
+            <img src="assets/logo.svg" alt="logo do site">
+            Snitap
+        </div>
+
+        <nav class="bottom flex">
+            <a href="#sobre">Sobre</a>
+            <a href="#nossas-lojas">Nossas lojas</a>
+            <a href="#politica-privacidade">Política de privacidade</a>
+        </nav>
+
+        <div class="social-links flex">
+            <a href="#" title="instagram">
+                <img src="assets/icons/instagram.svg" alt="ícone do Instagram">
+            </a>
+
+            <a href="#" title="facebook">
+                <img src="assets/icons/facebook.svg" alt="ícone do Facebook">
+            </a>
+
+            <a href="#" title="youtube">
+                <img src="assets/icons/youtube.svg" alt="ícone do YouTube">
+            </a>
+
+            <a href="#" title="tiktok">
+                <img src="assets/icons/tiktok.svg" alt="ícone do TikTok">
+            </a>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
