--- a/formulario-de-convite/index.html
+++ b/formulario-de-convite/index.html
@@ -67,17 +67,9 @@
                                     <label class="radio-box presential flex flex-1" for="presential">
                                         <input type="radio" name="type" id="presential" checked>
                                         <div class="image">
-                                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <g clip-path="url(#clip0_4103_392)">
-                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M5.33337 1.83331C5.11236 1.83331 4.9004 1.92111 4.74412 2.07739C4.58784 2.23367 4.50004 2.44563 4.50004 2.66665V14.1666H11.5V2.66665C11.5 2.44563 11.4122 2.23367 11.256 2.07739C11.0997 1.92111 10.8877 1.83331 10.6667 1.83331H5.33337ZM12.5 5.49998V2.66665C12.5 2.18042 12.3069 1.7141 11.9631 1.37028C11.6193 1.02647 11.1529 0.833313 10.6667 0.833313H5.33337C4.84714 0.833313 4.38083 1.02647 4.03701 1.37028C3.69319 1.7141 3.50004 2.18042 3.50004 2.66665V7.49998H2.66671C2.18048 7.49998 1.71416 7.69313 1.37034 8.03695C1.02653 8.38077 0.833374 8.84708 0.833374 9.33331V13.3333C0.833374 13.8195 1.02653 14.2859 1.37034 14.6297C1.71416 14.9735 2.18048 15.1666 2.66671 15.1666H13.3334C13.8196 15.1666 14.2859 14.9735 14.6297 14.6297C14.9736 14.2859 15.1667 13.8195 15.1667 13.3333V7.33331C15.1667 6.84708 14.9736 6.38077 14.6297 6.03695C14.2859 5.69313 13.8196 5.49998 13.3334 5.49998H12.5ZM12.5 6.49998V14.1666H13.3334C13.5544 14.1666 13.7663 14.0788 13.9226 13.9226C14.0789 13.7663 14.1667 13.5543 14.1667 13.3333V7.33331C14.1667 7.1123 14.0789 6.90034 13.9226 6.74406C13.7663 6.58778 13.5544 6.49998 13.3334 6.49998H12.5ZM3.50004 8.49998H2.66671C2.44569 8.49998 2.23373 8.58778 2.07745 8.74406C1.92117 8.90034 1.83337 9.1123 1.83337 9.33331V13.3333C1.83337 13.5543 1.92117 13.7663 2.07745 13.9226C2.23373 14.0788 2.44569 14.1666 2.66671 14.1666H3.50004V8.49998ZM6.16671 3.99998C6.16671 3.72384 6.39056 3.49998 6.66671 3.49998H9.33337C9.60952 3.49998 9.83337 3.72384 9.83337 3.99998C9.83337 4.27612 9.60952 4.49998 9.33337 4.49998H6.66671C6.39056 4.49998 6.16671 4.27612 6.16671 3.99998ZM6.16671 6.66665C6.16671 6.3905 6.39056 6.16665 6.66671 6.16665H9.33337C9.60952 6.16665 9.83337 6.3905 9.83337 6.66665C9.83337 6.94279 9.60952 7.16665 9.33337 7.16665H6.66671C6.39056 7.16665 6.16671 6.94279 6.16671 6.66665ZM6.16671 9.33331C6.16671 9.05717 6.39056 8.83331 6.66671 8.83331H9.33337C9.60952 8.83331 9.83337 9.05717 9.83337 9.33331C9.83337 9.60945 9.60952 9.83331 9.33337 9.83331H6.66671C6.39056 9.83331 6.16671 9.60945 6.16671 9.33331ZM6.16671 12C6.16671 11.7238 6.39056 11.5 6.66671 11.5H9.33337C9.60952 11.5 9.83337 11.7238 9.83337 12C9.83337 12.2761 9.60952 12.5 9.33337 12.5H6.66671C6.39056 12.5 6.16671 12.2761 6.16671 12Z" fill="#869198"/>
-                                                </g>
-                                                <defs>
-                                                <clipPath id="clip0_4103_392">
-                                                <rect width="16" height="16" fill="white"/>
-                                                </clipPath>
-                                                </defs>
-                                                </svg>
-                                                
+                                            <svg width="16" height="16" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M10.6666 3.66675C10.2246 3.66675 9.80067 3.84234 9.48811 4.1549C9.17555 4.46746 8.99996 4.89139 8.99996 5.33341V28.3334H23V5.33341C23 4.89139 22.8244 4.46746 22.5118 4.1549C22.1992 3.84234 21.7753 3.66675 21.3333 3.66675H10.6666ZM25 11.0001V5.33341C25 4.36095 24.6136 3.42832 23.926 2.74069C23.2384 2.05306 22.3058 1.66675 21.3333 1.66675H10.6666C9.69417 1.66675 8.76153 2.05306 8.0739 2.74069C7.38627 3.42832 6.99996 4.36095 6.99996 5.33341V15.0001H5.33329C4.36083 15.0001 3.4282 15.3864 2.74057 16.074C2.05293 16.7617 1.66663 17.6943 1.66663 18.6667V26.6667C1.66663 27.6392 2.05293 28.5718 2.74057 29.2595C3.4282 29.9471 4.36083 30.3334 5.33329 30.3334H26.6666C27.6391 30.3334 28.5717 29.9471 29.2593 29.2595C29.947 28.5718 30.3333 27.6392 30.3333 26.6667V14.6667C30.3333 13.6943 29.947 12.7617 29.2593 12.074C28.5717 11.3864 27.6391 11.0001 26.6666 11.0001H25ZM25 13.0001V28.3334H26.6666C27.1087 28.3334 27.5326 28.1578 27.8451 27.8453C28.1577 27.5327 28.3333 27.1088 28.3333 26.6667V14.6667C28.3333 14.2247 28.1577 13.8008 27.8451 13.4882C27.5326 13.1757 27.1087 13.0001 26.6666 13.0001H25ZM6.99996 17.0001H5.33329C4.89127 17.0001 4.46734 17.1757 4.15478 17.4882C3.84222 17.8008 3.66663 18.2247 3.66663 18.6667V26.6667C3.66663 27.1088 3.84222 27.5327 4.15478 27.8453C4.46734 28.1578 4.89127 28.3334 5.33329 28.3334H6.99996V17.0001ZM12.3333 8.00008C12.3333 7.4478 12.781 7.00008 13.3333 7.00008H18.6666C19.2189 7.00008 19.6666 7.4478 19.6666 8.00008C19.6666 8.55237 19.2189 9.00008 18.6666 9.00008H13.3333C12.781 9.00008 12.3333 8.55237 12.3333 8.00008ZM12.3333 13.3334C12.3333 12.7811 12.781 12.3334 13.3333 12.3334H18.6666C19.2189 12.3334 19.6666 12.7811 19.6666 13.3334C19.6666 13.8857 19.2189 14.3334 18.6666 14.3334H13.3333C12.781 14.3334 12.3333 13.8857 12.3333 13.3334ZM12.3333 18.6667C12.3333 18.1145 12.781 17.6667 13.3333 17.6667H18.6666C19.2189 17.6667 19.6666 18.1145 19.6666 18.6667C19.6666 19.219 19.2189 19.6667 18.6666 19.6667H13.3333C12.781 19.6667 12.3333 19.219 12.3333 18.6667ZM12.3333 24.0001C12.3333 23.4478 12.781 23.0001 13.3333 23.0001H18.6666C19.2189 23.0001 19.6666 23.4478 19.6666 24.0001C19.6666 24.5524 19.2189 25.0001 18.6666 25.0001H13.3333C12.781 25.0001 12.3333 24.5524 12.3333 24.0001Z" fill="white"/>
+                                            </svg>
                                         </div>
                                         <span>Presencial</span>
                                     </label>
@@ -305,15 +297,11 @@
                                 <div class="dropzone flex">
                                     <div class="drop-button flex gap-12">
                                         <input type="file" name="cover-photo" id="cover-photo">
-                                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M15.2929 3.29289C15.6834 2.90237 16.3166 2.90237 16.7071 3.29289L23.3738 9.95956C23.7643 10.3501 23.7643 10.9832 23.3738 11.3738C22.9832 11.7643 22.3501 11.7643 21.9596 11.3738L17 6.41421V20C17 20.5523 16.5523 21 16 21C15.4477 21 15 20.5523 15 20V6.41421L10.0404 11.3738C9.64992 11.7643 9.01675 11.7643 8.62623 11.3738C8.2357 10.9832 8.2357 10.3501 8.62623 9.95956L15.2929 3.29289ZM4 19C4.55228 19 5 19.4477 5 20V25.3333C5 25.7754 5.17559 26.1993 5.48816 26.5118C5.80072 26.8244 6.22464 27 6.66667 27H25.3333C25.7754 27 26.1993 26.8244 26.5118 26.5118C26.8244 26.1993 27 25.7754 27 25.3333V20C27 19.4477 27.4477 19 28 19C28.5523 19 29 19.4477 29 20V25.3333C29 26.3058 28.6137 27.2384 27.9261 27.9261C27.2384 28.6137 26.3058 29 25.3333 29H6.66667C5.69421 29 4.76157 28.6137 4.07394 27.9261C3.38631 27.2384 3 26.3058 3 25.3333V20C3 19.4477 3.44772 19 4 19Z" fill="#59B2FF"/>
-                                            <defs>
-                                            <clipPath id="clip0_2140_1005">
-                                            <rect width="16" height="16" fill="#59B2FF"/>
-                                            </clipPath>
-                                            </defs>
+                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.64645 1.64645C7.84171 1.45118 8.15829 1.45118 8.35355 1.64645L11.6869 4.97978C11.8821 5.17504 11.8821 5.49162 11.6869 5.68689C11.4916 5.88215 11.175 5.88215 10.9798 5.68689L8.5 3.20711V10C8.5 10.2761 8.27614 10.5 8 10.5C7.72386 10.5 7.5 10.2761 7.5 10V3.20711L5.02022 5.68689C4.82496 5.88215 4.50838 5.88215 4.31311 5.68689C4.11785 5.49162 4.11785 5.17504 4.31311 4.97978L7.64645 1.64645ZM2 9.5C2.27614 9.5 2.5 9.72386 2.5 10V12.6667C2.5 12.8877 2.5878 13.0996 2.74408 13.2559C2.90036 13.4122 3.11232 13.5 3.33333 13.5H12.6667C12.8877 13.5 13.0996 13.4122 13.2559 13.2559C13.4122 13.0996 13.5 12.8877 13.5 12.6667V10C13.5 9.72386 13.7239 9.5 14 9.5C14.2761 9.5 14.5 9.72386 14.5 10V12.6667C14.5 13.1529 14.3068 13.6192 13.963 13.963C13.6192 14.3068 13.1529 14.5 12.6667 14.5H3.33333C2.8471 14.5 2.38079 14.3068 2.03697 13.963C1.69315 13.6192 1.5 13.1529 1.5 12.6667V10C1.5 9.72386 1.72386 9.5 2 9.5Z" fill="#59B2FF"/>
                                             </svg>
-                                            <span>Selecionar</span>
+                                                                                    
+                                        <span>Selecionar</span>
                                     </div>
                                     <p>Nenhum arquivo selecionado</p>
                                 </div>
@@ -375,44 +363,32 @@
                         <div class="terms-inner">
                             <div class="input-wrapper flex gap-12">
                                 <label for="term-01" aria-label="term-01">
-                                    <input type="checkbox"
-                                    name="term-01" i
-                                    d="term-01">
-                                </label>
-                                <p>
+                                    <input type="checkbox" name="term-01" id="term-01">
                                     Li e concordo com os <span>Termos e Condições</span> e com a <span>Política de Privacidade</span>
-                                </p>
+                                </label>
                             </div>
 
 
                             <div class="input-wrapper flex gap-16">
                                 <label for="term-02" aria-label="term-02">
-                                    <input type="checkbox"
-                                    name="term-02" i
-                                    d="term-02">
-                                </label>
-                                <p>
+                                    <input type="checkbox" name="term-02" id="term-02">
                                     Aceito receber atualizações e promoções por e-mail
-                                </p>
+                                </label>
                             </div>
 
 
                             <div class="input-wrapper flex gap-16">
                                 <label for="term-03" aria-label="term-03">
-                                    <input type="checkbox"
-                                    name="term-03" i
-                                    d="term-03">
-                                </label>
-                                <p>
+                                    <input type="checkbox" name="term-03" id="term-03">
                                     Aceito receber atualizações e promoções por SMS
-                                </p>
+                                </label>
                             </div>
                         </div>
                     </fieldset>
 
                     <div class="button-container">
                         <button type="submit" id="submit" class="flex" value="Gerar convite">
-                            <img src="assets/icons/ticket-hover.svg" alt="ícone de ticket">
+                            <img src="assets/icons/ticket.svg" alt="ícone de ticket">
                             Gerar convite
                         </button>
                     </div>
