portfolio-dev refeito

--- a/portfolio-dev/index.html
+++ b/portfolio-dev/index.html
@@ -11,220 +11,212 @@
     <link href="https://fonts.googleapis.com/css2?family=Asap:wdth,wght@75..125,700&family=Inconsolata:wdth@50..200&family=Maven+Pro:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header-container">
+    <div class="bg-container">
+        <div class="header-container">
 
-        <div class="introduce-wrapper" id="primary">
-
-            <div id="avatar" class="flex">
-
+            <header>
                 <div class="user-wrapper">
-
-                    <figure class="user-border">
+                    <div class="photo-perfil">
                         <img src="assets/images/border-user.png" alt="borda do perfil">
-                    </figure>
-
-                    <figure class="user-photo" >
                         <img src="assets/images/user.png" alt="foto do usuário">
-                    </figure>
-
-                    <figure class="icon-code">
-                        <img src="assets/icons/Code01.png" alt="ícone de código">
-                    </figure>
-
-                </div>
-
-                <div class="info-wrapper">
-
-                    <span class="subtitle">
-                        Hello World! Meu nome é <span class="red">Martina Santos</span> e sou
+                    </div>
+                    <span>
+                        <img src="assets/icons/Code.svg" alt="ícone de código">
                     </span>
-
-                    <h1>Desenvolvedora Fullstack</h1>
-
-                    <p class="gray-400">
-                        Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.
-                    </p>
-
                 </div>
-            </div>
+
+                <span>
+                    Hello World! Meu nome é <span>Martina Santos</span> e sou
+                </span>
+                <h1>
+                    Desenvolvedora Fullstack
+                </h1>
+                <p>
+                    Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.
+                </p>
+
+            </header>
 
             <div class="hard-skills">
-                <figure class="itens-flex hard-skills-size">
+                <div class="input-wrapper">
                     <img src="assets/icons/icon-github.svg" alt="ícone do GitHub"> 
-                    <figcaption class="word-hidden">GitHub</figcaption>
-                </figure>
-                <figure class="itens-flex hard-skills-size">
-                    <img src="assets/icons/icon-html.svg" alt="ícone do HTML"> 
-                    <figcaption class="word-hidden">HTML</figcaption>
-                </figure>
-                <figure class="itens-flex hard-skills-size">
+                    <p>GitHub</p>
+                </div>
+                <div class="input-wrapper">
+                    <img src="assets/icons/icon-html.svg" alt="ícone do HTML">  
+                    <p>HTML</p>
+                </div>
+                <div class="input-wrapper">
                     <img src="assets/icons/icon-css.svg" alt="ícone do CSS"> 
-                    <figcaption class="word-hidden">CSS</figcaption>
-                </figure>
-                <figure class="itens-flex hard-skills-size">
+                    <p>CSS</p>
+                </div>
+                <div class="input-wrapper">
                     <img src="assets/icons/icon-javascript.svg" alt="ícone do Javascript"> 
-                    <figcaption class="word-hidden">Javascript</figcaption>
-                </figure>
-                <figure class="itens-flex hard-skills-size">
+                    <p>Javascript</p>
+                </div>
+                <div class="input-wrapper">
                     <img src="assets/icons/icon-react.svg" alt="ícone do React"> 
-                    <figcaption class="word-hidden">React</figcaption>
-                </figure>
-                <figure class="itens-flex hard-skills-size">
+                    <p>React</p>
+                </div>
+                <div class="input-wrapper">
                     <img src="assets/icons/icon-node.svg" alt="ícone do Node.js"> 
-                    <figcaption class="word-hidden">Node.js</figcaption>
-                </figure>
+                    <p>Node.js</p>
+                </div>
             </div>
         </div>
 
-        <div id="secondary">
-            <img src="assets/icons/CaretDoubleDown.png" alt="ícone mais conteúdo">
-        </div>
-    </header>
+        <img src="assets/icons/CaretDoubleDown.png" alt="ícone mais conteúdo">
+    </div>
 
-    <main class="main-container">
+    <main>
         <div class="title-container">
-            <span class="subtitle red">
-                Meu trabalho
-            </span>
-            <h2>Veja os projetos em destaque</h2>
+            <span>Meu trabalho</span>
+            <h2>
+                Veja os projetos em destaque
+            </h2>
         </div>
 
-        <div class="grid project-container">
-            <figure class="flex">
+        <div class="project-container">
+
+            <div class="project-inner">
                 <img src="assets/images/Thumbnail_Project-01.png" alt="Projeto Travelgram">
-                <figcaption>
+                <div>
                     <h3>Travelgram</h3>
-                    <p class="text-sm">
+                    <p>
                         Rede social onde as pessoas mostram os registros de suas viagens pelo mundo
                     </p>
-                </figcaption>
-            </figure>
+                </div>
+            </div>
 
-            <figure class="flex">
+            <div class="project-inner">
                 <img src="assets/images/Thumbnail_Project-02.png" alt="Projeto Tech News">
-                <figcaption>
+                <div>
                     <h3>Tech News</h3>
-                    <p class="text-sm">
+                    <p>
                         Homepage de um portal de notícias sobre a área de tecnologia
                     </p>
-                </figcaption>
-            </figure>
+                </div>
+            </div>
 
-            <figure class="flex">
+            <div class="project-inner">
                 <img src="assets/images/Thumbnail_Project-03.png" alt="Projeto Página de Receitas">
-                <figcaption>
+                <div>
                     <h3>Página de receita</h3>
-                    <p class="text-sm">
+                    <p>
                         Página com o passo a passo de uma receita para cupcakes
                     </p>
-                </figcaption>
-            </figure>
+                </div>
+            </div>
 
-            <figure class="flex">
+            <div class="project-inner">
                 <img src="assets/images/Thumbnail_Project-04.png" alt="Projeto Zingen">
-                <figcaption>
+                <div>
                     <h3>Zingen</h3>
-                    <p class="text-sm">
+                    <p>
                         Landing Page completa e responsiva de um aplicativo de Karaokê
                     </p>
-                </figcaption>
-            </figure>
+                </div>
+            </div>
 
-            <figure class="flex">
+            <div class="project-inner">
                 <img src="assets/images/Thumbnail_Project-05.png" alt="Projeto Página de Reembolso">
-                <figcaption>
+                <div>
                     <h3>Refund</h3>
-                    <p class="text-sm">
-                        Um sistema para pedido e acompanhamento de reembolso 
+                    <p>
+                        Um sistema para pedido e acompanhamento de reembolso
                     </p>
-                </figcaption>
-            </figure>
+                </div>
+            </div>
 
-            <figure class="flex">
+            <div class="project-inner">
                 <img src="assets/images/Thumbnail_Project-06.png" alt="Projeto Página de turismo">
-                <figcaption>
+                <div>
                     <h3>Página de turismo</h3>
-                    <p class="text-sm">
+                    <p>
                         Página com as principais informações para quem quer viajar para Busan
                     </p>
-                </figcaption>
-            </figure>
+                </div>
+            </div>
         </div>
     </main>
 
-    <aside class="flex aside-container">
-        <div class="flex title-container">
-            <span class="subtitle red">
-                Meus Serviços
-            </span>
-            <h2>Como posso ajudar o seu negócio</h2>
+    <aside>
+        <div class="title-container">
+            <span>Meus Serviços</span>
+            <h2>
+                Como posso ajudar o seu negócio
+            </h2>
         </div>
 
         <div class="devices-container">
-            <figure>
+            <div class="devices-inner">
                 <img src="assets/icons/devices.svg" alt="ícone de dispositivos (aparelhos)">
-                <figcaption>
+                <div>
                     <h3>Websites e Aplicativos</h3>
-                    <p class="text-sm">Desenvolvimento de interfaces</p>
-                </figcaption>
-            </figure>
-
-            <figure>
+                    <p>
+                        Desenvolvimento de interfaces
+                    </p>
+                </div> 
+            </div>
+           
+            <div class="devices-inner">
                 <img src="assets/icons/hardDrives.svg" alt="ícone de servidores">
-                <figcaption>
+                <div>
                     <h3>API e banco de dados</h3>
-                    <p class="text-sm">Criação de serviços do sistema </p>
-                </figcaption>
-            </figure>
+                    <p>
+                        Criação de serviços do sistema
+                    </p>
+                </div> 
+            </div>
 
-            <figure>
+            <div class="devices-inner">
                 <img src="assets/icons/infinity.svg" alt="ícone de DevOps">
-                <figcaption>
+                <div>
                     <h3>DevOps</h3>
-                    <p class="text-sm">Gestão e infraestrutura da aplicação</p>
-                </figcaption>
-            </figure>
+                    <p>
+                        Gestão e infraestrutura da aplicação
+                    </p>
+                </div> 
+            </div>
         </div>
     </aside>
 
-    <section class="flex section-container">
-        <div class="flex title-container">
-            <span class="subtitle purple">
-                Contato
-            </span>
-            <h2>Gostou do meu trabalho?</h2>
-            <p class="text-md">Gostou do meu trabalho? </p>
+    <footer>
+        <div class="title-container">
+            <span>Contato</span>
+            <h2>
+                Gostou do meu trabalho?
+            </h2>
+            <p>
+                Entre em contato ou acompanhe as minhas redes sociais!
+            </p>
         </div>
 
-        <nav class="flex nav-container">
-            <span class="itens-flex">
-                <a href="#" class="itens-flex">
-                    <img src="assets/icons/linkedin.svg" alt="ícone do Linkedin">Linkedin
-                </a>
-                <img class="right" src="assets/icons/arrowUpRight.svg" alt="ícone de uma flexa com a ponta para direita apontando para cima">
-            </span>
-
-            <span class="itens-flex">
-                <a href="#" class="itens-flex">
-                    <img src="assets/icons/instagram-logo.svg" alt="ícone do Instagram">Instagram
-                </a>
-                <img src="assets/icons/arrowUpRight.svg" alt="ícone de uma flexa com a ponta para direita apontando para cima">
-            </span>
-
-            <span class="itens-flex">
-                <a href="#" class="itens-flex">
-                    <img src="assets/icons/github-logo.svg" alt="ícone do GitHub">GitHub
-                </a>
-                <img src="assets/icons/arrowUpRight.svg" alt="ícone de uma flexa com a ponta para direita apontando para cima">
-            </span>
-
-            <span class="itens-flex">
-                <a href="#" class="itens-flex">
-                    <img src="assets/icons/envelopeSimple.svg" alt="ícone de um envelope simples">E-mail
-                </a>
+        <nav>
+            <a href="#">
+                <img src="assets/icons/linkedin.svg" alt="ícone do Linkedin">
+                Linkedin
                 <img src="assets/icons/arrowUpRight.svg" alt="ícone de uma flecha apontando para nordeste">
-            </span>
+            </a>
+
+            <a href="#">
+                <img src="assets/icons/instagram-logo.svg" alt="ícone do Instagram">
+                Instagram
+                <img src="assets/icons/arrowUpRight.svg" alt="ícone de uma flecha apontando para nordeste">
+            </a>
+
+            <a href="#">
+                <img src="assets/icons/github-logo.svg" alt="ícone do GitHub">
+                GitHub
+                <img src="assets/icons/arrowUpRight.svg" alt="ícone de uma flecha apontando para nordeste">
+            </a>
+
+            <a href="#">
+                <img src="assets/icons/envelopeSimple.svg" alt="ícone de um envelope simples">
+                E-mail
+                <img src="assets/icons/arrowUpRight.svg" alt="ícone de uma flecha apontando para nordeste">
+            </a>
         </nav>
-    </section>
+    </footer>
 </body>
 </html>
