create hero 1 and some styles

--- a/clube-de-assinatura/index.html
+++ b/clube-de-assinatura/index.html
@@ -16,6 +16,41 @@
             <div class="logo-image"></div>
             <button type="button" id="sign">Assinar</button>
         </nav>
+
+        <header>
+            <h1>
+                Desperte a sua imaginação e explore novos mundos
+            </h1>
+            <span>
+                Junte-se ao clube de assinatura Encantos Literários e descubra maravilhas e aventuras a cada página 
+            </span>
+        </header>
+
+        <div class="hero-background">
+            <div></div>
+        </div>
+
+        <div class="blur-container">
+            <div class="ellipse-1"></div>
+            <div class="ellipse-2"></div>
+            <div class="ellipse-3"></div>
+            <div class="ellipse-4"></div>
+        </div>
+
+        <div class="icons-container">
+            <h2>
+                Receba todo mês um <span>livro surpresa</span> do seu tema favorito, acompanhado de <span>brindes exclusivos</span> que tornarão a sua experiência literária <span>encantadora</span>
+            </h2>
+            <div class="icon-01 animated-icon">
+                <img src="assets/images/hero-02/mystery-opened-spellbook.png" alt="ícone de livro de magia">
+            </div>
+            <div class="icon-02 animated-icon">
+                <img src="assets/images/hero-02/mystery-ouija-planchette.png" alt="ícone de paleta ouija ">
+            </div>
+            <div class="icon-03 animated-icon">
+                <img src="assets/images/hero-02/mystery-crystal-ball.png" alt="ícone de bola de cristal">
+            </div>
+        </div>
     </div>
 </body>
 </html>
