--- a/clube-de-assinatura/index.html
+++ b/clube-de-assinatura/index.html
@@ -39,15 +39,23 @@
 
         <div class="icons-container">
             <h2>
-                Receba todo mês um <span>livro surpresa</span> do seu tema favorito, acompanhado de <span>brindes exclusivos</span> que tornarão a sua experiência literária <span>encantadora</span>
+                <span class="part-01">Receba todo mês um 
+                    <span>livro surpresa</span>
+                </span>
+                <span class="part-02"> do seu tema favorito, acompanhado de 
+                    <span>brindes exclusivos</span>
+                </span>
+                <span class="part-03"> que tornarão a sua experiência literária 
+                    <span>encantadora</span>
+                </span>
             </h2>
-            <div class="icon-01 animated-icon">
+            <div class="icon-01">
                 <img src="assets/images/hero-02/mystery-opened-spellbook.png" alt="ícone de livro de magia">
             </div>
-            <div class="icon-02 animated-icon">
+            <div class="icon-02">
                 <img src="assets/images/hero-02/mystery-ouija-planchette.png" alt="ícone de paleta ouija ">
             </div>
-            <div class="icon-03 animated-icon">
+            <div class="icon-03">
                 <img src="assets/images/hero-02/mystery-crystal-ball.png" alt="ícone de bola de cristal">
             </div>
         </div>
