kit-book container

--- a/clube-de-assinatura/index.html
+++ b/clube-de-assinatura/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="icons-container">
-            <h2>
+            <div>
                 <span class="part-01">Receba todo mês um 
                     <span>livro surpresa</span>
                 </span>
@@ -48,7 +48,7 @@
                 <span class="part-03"> que tornarão a sua experiência literária 
                     <span>encantadora</span>
                 </span>
-            </h2>
+            </div>
             <div class="icon-01">
                 <img src="assets/images/hero-02/mystery-opened-spellbook.png" alt="ícone de livro de magia">
             </div>
@@ -60,5 +60,35 @@
             </div>
         </div>
     </div>
+
+    <section class="kit-book">
+        <div class="title-container">
+            <div class="title-inner">
+                <img src="assets/start-pink.svg" alt="ícone de estrela">
+                <h2>Conheça o kit mensal</h2>
+                <img src="assets/start-pink.svg" alt="ícone de estrela">
+            </div>
+            <p>
+                Recebe uma caixa surpresa todos os meses
+            </p>
+        </div>
+
+        <div class="book-container">
+            <img src="assets/images/hero-03/book.png" alt="..">
+            <img src="assets/images/hero-03/bookmark-yellow.png" alt="..">
+            <img src="assets/images/hero-03/bookmark-purple.png" alt="..">
+            <img src="assets/images/hero-03/pin.png" alt="..">
+
+        
+            <img src="assets/images/hero-03/vector-top.svg" alt="..">
+            <img src="assets/images/hero-03/vector-center.svg" alt="..">
+            <img src="assets/images/hero-03/vector-bottom.svg" alt="..">
+
+            <span class="top">Livro em capa dura</span>
+            <span class="center">Broche exclusivo</span>
+            <span class="bottom">Marca páginas temático</span>
+        </div>
+
+    </section>
 </body>
 </html>
