--- a/clube-de-assinatura/index.html
+++ b/clube-de-assinatura/index.html
@@ -88,7 +88,7 @@
             <span class="center">Broche exclusivo</span>
             <span class="bottom">Marca páginas temático</span>
         </div>
-
+        <div class="ellipse-5"></div>
     </section>
 </body>
 </html>
