--- a/clube-de-assinatura/index.html
+++ b/clube-de-assinatura/index.html
@@ -225,6 +225,58 @@
 
         <div class="bg"></div>
     </section>
+
+    <footer>
+        <div class="links-container">
+            <div class="social-links">
+                <img src="assets/images/hero-01/logo-horizontal.svg" alt="">
+                <nav>
+                    <a href="#" title="instagram">
+                    <span></span>
+                    </a>
+
+                    <a href="#" title="twitter">
+                    <span></span>
+                    </a>
+
+                    <a href="#" title="facebook">
+                    <span></span>
+                    </a>
+
+                    <a href="#" title="discord">
+                    <span></span>
+                    </a>
+
+                    <a href="#" title="whatsapp">
+                    <span></span>
+                    </a>
+                    <a href="#" title="mail">
+                    <span></span>
+                    </a>
+                </nav>
+            </div>
+
+            <div class="nav-wrapper">
+                <div class="content-links">
+                    <h3>Conteúdos</h3>
+                    <nav>
+                        <a href="#">Kits passados</a>
+                        <a href="#">Clube de membros</a>
+                        <a href="#">Blog</a>
+                    </nav>
+                </div>
+                <div class="help-links">
+                    <h3>Ajuda</h3>
+                    <nav>
+                        <a href="#">Central de ajuda</a>
+                        <a href="#">Regulamentos</a>
+                        <a href="#">Suporte</a>
+                    </nav>
+                </div>
+            </div>
+        </div>
+            
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
